--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <button id="learn-more">LEARN MORE</button>
             </div>
             <div id="actions" class="hidden">
+                <input type="text" id="invite-code" placeholder="Enter Invite Code" class="hidden">
                 <button id="enter-code"><span>ENTER INVITE CODE</span></button>
                 <button id="request-trial"><span>REQUEST TRIAL</span></button>
                 <button id="back">RETURN</button>
