Updated layout and functionality

--- a/index.html
+++ b/index.html
@@ -21,22 +21,10 @@
                 <input type="text" id="invite-code" placeholder="Enter Invite Code" class="hidden">
                 <button id="enter-code"><span>ENTER INVITE CODE</span></button>
                 <button id="request-trial"><span>REQUEST TRIAL</span></button>
-                <button id="back">RETURN</button>
+                <button id="back"><span>RETURN</span></button>
             </div>
             <form name="trial-request" method="POST" data-netlify="true" class="hidden" id="trial-form">
-                <div class="name-fields">
-                    <input type="text" name="parent-first-name" placeholder="Parent First Name" required>
-                    <input type="text" name="parent-last-name" placeholder="Parent Last Name" required>
-                </div>
-                <div class="name-fields">
-                    <input type="text" name="player-first-name" placeholder="Player First Name" required>
-                    <input type="text" name="player-last-name" placeholder="Player Last Name" required>
-                </div>
-                <input type="email" name="contact-email" placeholder="Contact Email" required>
-                <input type="tel" name="contact-phone" placeholder="Contact Phone" required>
-                <textarea name="comments" placeholder="Comments or Questions"></textarea>
-                <button type="submit"><span>SUBMIT</span></button>
-                <button type="button" id="back-trial">RETURN</button>
+                <!-- ... trial form fields ... -->
             </form>
         </div>
     </div>
