Figuring it out

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div id="actions" class="hidden">
                 <input type="text" id="invite-code" placeholder="Enter Invite Code" class="hidden">
                 <button id="enter-code"><span>ENTER INVITE CODE</span></button>
-                <button id="request-trial"><span>REQUEST TRIAL</span></button>
+                <button id="request-trial"><span>REQUEST A TRIAL</span></button>
                 <button id="back"><span>RETURN</span></button>
             </div>
             <form name="trial-request" method="POST" data-netlify="true" class="hidden" id="trial-form">
