--- a/about.html
+++ b/about.html
@@ -22,12 +22,20 @@
         <div id="content-container">
             <div class="content">
                 <p>Apex Athletic Club is an invite-only collective for exceptional individuals. Our players are distinguished in their respect, leadership, and determination to acquire new skills. Our coaches are full-time professionals that utilize best practices from the top youth academies around the world. We offer 12 months of programming across multiple sports with the primary focus on soccer.</p>
+                
+                <h3>Yearly Program Template</h3>
+                <div class="chart annual-chart"></div>
+
+                <h3>Weekly Program Template</h3>
+                <div class="chart weekly-chart"></div>
+
                 <button id="return-home">RETURN HOME</button>
             </div>
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.cells.min.js"></script>
+    <script src="charts.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             if (!localStorage.getItem('loggedIn')) {
@@ -65,5 +73,7 @@
             localStorage.removeItem('loggedIn');
         });
     </script>
+    <!-- Add this line before the closing </body> tag -->
+    <script src="charts.js"></script>
 </body>
 </html>
