fixed scroll and updated about page

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <div id="overlay">
         <div id="header">
             <div id="logo-container">
-                <img id="club-logo" src="images/club-logo.png" alt="Apex Athletic Club Logo">
+                <img id="club-logo" src="images/AAC Logo.png" alt="Apex Athletic Club Logo">
             </div>
             <div id="header-text">
                 <h2>WELCOME TO APEX ATHLETIC CLUB</h2>
@@ -28,6 +28,34 @@
 
                 <h3>Weekly Program Template</h3>
                 <div class="chart weekly-chart"></div>
+
+                <h3>Where will we compete?</h3>
+                <div class="competition-images">
+                    <div class="image-container">
+                        <img src="images/XLSWAPEX.png" alt="XLSW Apex">
+                        <p>Indoor sports at XLSW Apex</p>
+                    </div>
+                    <div class="image-container">
+                        <img src="images/CARYJUDOCLUB.png" alt="Cary Judo Club">
+                        <p>Judo at Cary Judo Club</p>
+                    </div>
+                    <div class="image-container">
+                        <img src="images/CPR.png" alt="Mills Park">
+                        <p>Outdoor soccer at Mills Park</p>
+                    </div>
+                    <div class="image-container">
+                        <img src="images/DPR.png" alt="CM Herndon Park">
+                        <p>Outdoor soccer at CM Herndon Park</p>
+                    </div>
+                    <div class="image-container">
+                        <img src="images/USCLUBSOCCER.webp" alt="US Club Soccer">
+                        <p>Leagues and tournaments via US Club Soccer</p>
+                    </div>
+                    <div class="image-container">
+                        <img src="images/USFUTSAL.png" alt="US Futsal">
+                        <p>Futsal tournaments via US Futsal</p>
+                    </div>
+                </div>
 
                 <button id="return-home">RETURN HOME</button>
             </div>
@@ -73,7 +101,5 @@
             localStorage.removeItem('loggedIn');
         });
     </script>
-    <!-- Add this line before the closing </body> tag -->
-    <script src="charts.js"></script>
 </body>
 </html>
