--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="vanta-bg"></div>
     <div id="overlay">
         <div id="logo-container">
-            <img id="club-logo" src="images/club-logo.png" alt="Apex Athletic Club Logo">
+            <img id="club-logo" src="images/AAC Logo.png" alt="Apex Athletic Club Logo">
         </div>
         <div id="content-container">
             <div class="content">
