--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.cells.min.js"></script>
+    <script src="https://www.google.com/recaptcha/enterprise.js?render=6LdQpEMqAAAAABt-6hEKIxcgUAGgsALzCEdoZu0J"></script>
     <script src="script.js" defer></script>
 </head>
 <body>
@@ -27,7 +28,7 @@
                 <button id="request-trial"><span>REQUEST A TRIAL</span></button>
                 <button id="back"><span>RETURN</span></button>
             </div>
-            <form name="trial-request" method="POST" data-netlify="true" class="hidden" id="trial-form">
+            <form id="trial-form" class="hidden">
                 <div class="name-fields">
                     <input type="text" name="parentFirstName" placeholder="Parent First Name" required>
                     <input type="text" name="parentLastName" placeholder="Parent Last Name" required>
@@ -65,7 +66,12 @@
                 <input type="email" name="email" placeholder="Email" required>
                 <input type="tel" name="phone" placeholder="Phone Number" required>
                 <textarea name="message" placeholder="Why do you want to join Apex Athletic Club?" required></textarea>
-                <button type="submit" id="submit-trial"><span>SUBMIT REQUEST</span></button>
+                <button class="g-recaptcha" 
+                    data-sitekey="6LdQpEMqAAAAABt-6hEKIxcgUAGgsALzCEdoZu0J" 
+                    data-callback='onSubmit' 
+                    data-action='submit'>
+                    Submit
+                </button>
                 <button type="button" id="back-trial"><span>RETURN</span></button>
             </form>
         </div>
