--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.cells.min.js"></script>
-    <script src="https://www.google.com/recaptcha/enterprise.js?render=6LdQpEMqAAAAABt-6hEKIxcgUAGgsALzCEdoZu0J"></script>
     <script src="script.js" defer></script>
 </head>
 <body>
@@ -66,12 +65,7 @@
                 <input type="email" name="email" placeholder="Email" required>
                 <input type="tel" name="phone" placeholder="Phone Number" required>
                 <textarea name="message" placeholder="Why do you want to join Apex Athletic Club?" required></textarea>
-                <button class="g-recaptcha" 
-                    data-sitekey="6LdQpEMqAAAAABt-6hEKIxcgUAGgsALzCEdoZu0J" 
-                    data-callback='onSubmit' 
-                    data-action='submit'>
-                    Submit
-                </button>
+                <button type="submit" id="submit-trial">Submit</button>
                 <button type="button" id="back-trial"><span>RETURN</span></button>
             </form>
         </div>
