expanded about page

--- a/about.html
+++ b/about.html
@@ -24,6 +24,8 @@
             <div class="content">
                 <p>Apex Athletic Club is an invite-only collective for exceptional individuals. Our players are distinguished in their respect, leadership, and determination to acquire new skills. Our coaches are full-time professionals that utilize best practices from the top youth academies around the world. We offer 12 months of programming across multiple sports with the primary focus on soccer.</p>
                 
+                <p>Our mission is to develop collegiate, professional, and international level players by creating a fun and challenging environment that inspires players to develop their skills and understanding of the game to the highest level. We aim to create lifelong soccer fans, players, coaches, and referees. To properly invest our time and energy into each player's development, we maintain a limited number of players and teams at Apex Athletic Club. This focused approach allows us to provide personalized attention and maximize the potential of each athlete in our program.</p>
+
                 <h3>Yearly Program Template</h3>
                 <div class="chart annual-chart"></div>
 
@@ -57,6 +59,65 @@
                         <p>Futsal tournaments via US Futsal</p>
                     </div>
                 </div>
+
+                <h3>Pricing and Value</h3>
+                <p>Apex Athletic Club offers a comprehensive year-round program at $200 per month. This all-inclusive fee covers:</p>
+                <ul>
+                    <li>12 months of multi-sport programming</li>
+                    <li>Professional coaching from full-time staff</li>
+                    <li>Access to facilities year round</li>
+                    <li>Participation in leagues and tournaments</li>
+                    <li>Cross-training in multiple sports for holistic athlete development</li>
+                    <li>Private small group training sessions</li>
+                </ul>
+                
+                <h4>Apex Athletic Club vs. Local Youth Soccer Clubs</h4>
+                <div class="comparison-table">
+                    <table>
+                        <tr>
+                            <th>Feature</th>
+                            <th>Apex Athletic Club</th>
+                            <th>Local Youth Soccer Clubs</th>
+                        </tr>
+                        <tr>
+                            <td>Annual Cost</td>
+                            <td>$200/month</td>
+                            <td>$2400+/year</td>
+                        </tr>
+                        <tr>
+                            <td>Seasons</td>
+                            <td>Year round</td>
+                            <td>Spring and Fall</td>
+                        </tr>
+                        <tr>
+                            <td>Sports Offered</td>
+                            <td>Indoor soccer, futsal, outdoor soccer, judo, flag football, roller hockey, and more</td>
+                            <td>Soccer only</td>
+                        </tr>
+                        <tr>
+                            <td>Private Small Group Training</td>
+                            <td>Included</td>
+                            <td>Additional cost if offered</td>
+                        </tr>
+                        <tr>
+                            <td>Indoor Facilities</td>
+                            <td>Year-round access</td>
+                            <td>Limited or no access</td>
+                        </tr>
+                        <tr>
+                            <td>Player and Team to Coach Ratio</td>
+                            <td>Minimized for maximum development</td>
+                            <td>Maximized</td>
+                        </tr>
+                        <tr>
+                            <td>Uniforms, Tournament Fees, and Travel Expenses</td>
+                            <td>Additional cost</td>
+                            <td>Additional cost</td>
+                        </tr>
+                    </table>
+                </div>
+
+                <p>Schedules and payments are conveniently managed through the TeamSnap app, ensuring easy communication and organization for all members.</p>
 
                 <button id="return-home">RETURN HOME</button>
             </div>
