wording on about

--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
                 </div>
 
                 <h3>Pricing and Value</h3>
-                <p>Apex Athletic Club offers a comprehensive year-round program at $200 per month. This all-inclusive fee covers:</p>
+                <p>Apex Athletic Club offers a comprehensive year-round program at $200 per month. This monthly fee covers:</p>
                 <ul>
                     <li>12 months of multi-sport programming</li>
                     <li>Professional coaching from full-time staff</li>
