added partnership to the homepage and about

--- a/about.html
+++ b/about.html
@@ -24,6 +24,14 @@
             <div class="content">
                 <p>Apex Athletic Club is an invite-only collective for exceptional individuals. Our players are distinguished in their respect, leadership, and determination to acquire new skills. Our coaches are full-time professionals that utilize best practices from the top youth academies around the world. We offer 12 months of programming across multiple sports with the primary focus on soccer.</p>
                                
+                <h3>Our Partnership with Ecuadorian Football Federation</h3>
+                <p>We are proud to have the support of the Ecuadorian Football Federation. This collaboration aims to enhance player and coaching development, competitive play, and cultural exchange. Key highlights include:</p>
+                <ul>
+                    <li><strong>Sports Exchanges:</strong> Preparing players for sports exchanges and ensuring their safety in joint projects.</li>
+                    <li><strong>Player Development:</strong> Providing a platform for players to showcase their skills and receive feedback from professional coaches.</li>
+                    <li><strong>Coaching Development:</strong> Providing opportunities for coaches to continue their education and development through CONMEBOL courses.</li>
+                </ul>
+                
                 <h3>Yearly Program Template</h3>
                 <div class="chart annual-chart"></div>
 
