--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
         <div id="logo-container">
             <img id="club-logo" src="images/AAC Logo.png" alt="Apex Athletic Club Logo">
         </div>
-        <div id="content-container">
+        <div id="content-container" class="hidden">
             <div class="content">
                 <button id="learn-more"><span>LEARN MORE</span></button>
+                <div id="partnership-container">
+                    <img id="partner-logo" src="images/Ecuador_national_football_team.png" alt="Ecuador National Football Team Logo">
+                    <p id="partnership-text">In partnership with the Ecuadorian Football Federation</p>
+                </div>
             </div>
             <div id="actions" class="hidden">
                 <input type="text" id="invite-code" placeholder="Enter Invite Code" class="hidden">
