--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <div id="vanta-bg"></div>
     <div id="overlay">
         <div id="logo-container">
-            <img id="club-logo" src="images/AAC Logo.png" alt="Apex Athletic Club Logo">
+            <a href="/">
+                <img id="club-logo" src="images/AAC Logo.png" alt="Apex Athletic Club Logo">
+            </a>
         </div>
         <div id="content-container" class="hidden">
             <div class="content">
