--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <button id="learn-more"><span>LEARN MORE</span></button>
                 <div id="partnership-container">
                     <img id="partner-logo" src="images/Ecuador_national_football_team.png" alt="Ecuador National Football Team Logo">
-                    <p id="partnership-text">In partnership with the Ecuadorian Football Federation</p>
+                    <p id="partnership-text">In partnership with the Ecuadorian Football Federation and more to come...</p>
                 </div>
             </div>
             <div id="actions" class="hidden">
