--- a/about.html
+++ b/about.html
@@ -71,11 +71,10 @@
                 <h3>Pricing and Value</h3>
                 <p>Apex Athletic Club offers a comprehensive year-round program at $200 per month. This monthly fee covers:</p>
                 <ul>
-                    <li>12 months of multi-sport programming</li>
-                    <li>Professional coaching from full-time staff</li>
+                    <li>12 months of multi-sport programming for holistic athlete development</li>
+                    <li>Professional coaching from a full-time staff</li>
                     <li>Access to facilities year round</li>
-                    <li>Participation in leagues and tournaments</li>
-                    <li>Cross-training in multiple sports for holistic athlete development</li>
+                    <li>Participation in indoor and outdoor leagues and tournaments</li>
                     <li>Private small group training sessions</li>
                 </ul>
                 
