by their not in their

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
         </div>
         <div id="content-container">
             <div class="content">
-                <p>Apex Athletic Club is an invite-only collective for exceptional individuals. Our players are distinguished in their respect, leadership, and determination to acquire new skills. Our coaches are full-time professionals that utilize best practices from the top youth academies around the world. We offer 12 months of programming across multiple sports with the primary focus on soccer.</p>
+                <p>Apex Athletic Club is an invite-only collective for exceptional individuals. Our players are distinguished by their respect, leadership, and determination to acquire new skills. Our coaches are full-time professionals that utilize best practices from the top youth academies around the world. We offer 12 months of programming across multiple sports with the primary focus on soccer.</p>
                                
                 <h3>Our Partnership with Ecuadorian Football Federation</h3>
                 <p>We are proud to have the support of the Ecuadorian Football Federation. This collaboration aims to enhance player and coaching development, competitive play, and cultural exchange. Key highlights include:</p>
