--- a/invite.html
+++ b/invite.html
@@ -3,8 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirecting...</title>
+    <title>Processing Invite Code - Apex Athletic Club</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.cells.min.js"></script>
+    <style>
+        body, html {
+            height: 100%;
+            margin: 0;
+            font-family: 'Share Tech Mono', monospace;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: black;
+            color: #00ff00;
+        }
+        #vanta-bg {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 1;
+        }
+        #overlay {
+            position: relative;
+            z-index: 2;
+            text-align: center;
+            padding: 20px;
+        }
+        #club-logo {
+            max-width: 300px;
+            margin-bottom: 20px;
+        }
+        #processing-text {
+            font-size: 1.2em;
+            margin-top: 20px;
+        }
+    </style>
+</head>
+<body>
+    <div id="vanta-bg"></div>
+    <div id="overlay">
+        <img id="club-logo" src="images/AAC Logo.png" alt="Apex Athletic Club Logo">
+        <p id="processing-text">Processing invite code...</p>
+    </div>
+
     <script>
+        VANTA.CELLS({
+            el: "#vanta-bg",
+            mouseControls: true,
+            touchControls: true,
+            gyroControls: false,
+            minHeight: 200.00,
+            minWidth: 200.00,
+            scale: 1.00,
+            color1: 0x045034,
+            color2: 0x109963,
+            size: 0.20,
+            speed: 0.00
+        });
+
         function processInviteCode() {
             const urlParams = new URLSearchParams(window.location.search);
             const inviteCode = urlParams.get('code');
@@ -12,19 +72,23 @@
                 const validCodes = ['AAC2023', 'HOLDEN2024'];
                 if (validCodes.includes(inviteCode.toUpperCase())) {
                     localStorage.setItem('loggedIn', 'true');
-                    window.location.href = '/about.html';
+                    setTimeout(() => {
+                        window.location.href = '/about.html';
+                    }, 2000); // 2-second delay
                 } else {
-                    alert('Invalid invite code. Redirecting to home page.');
-                    window.location.href = '/';
+                    setTimeout(() => {
+                        alert('Invalid invite code. Redirecting to home page.');
+                        window.location.href = '/';
+                    }, 2000); // 2-second delay
                 }
             } else {
-                window.location.href = '/';
+                setTimeout(() => {
+                    window.location.href = '/';
+                }, 2000); // 2-second delay
             }
         }
+        
         window.onload = processInviteCode;
     </script>
-</head>
-<body>
-    <p>Processing invite code...</p>
 </body>
 </html>
