changed delay time and text color on invite page

--- a/invite.html
+++ b/invite.html
@@ -17,7 +17,7 @@
             justify-content: center;
             align-items: center;
             background: black;
-            color: #00ff00;
+            color: white; /* Changed to white */
         }
         #vanta-bg {
             position: fixed;
@@ -84,7 +84,7 @@
             } else {
                 setTimeout(() => {
                     window.location.href = '/';
-                }, 2000); // 2-second delay
+                }, 1500); // 1.5-second delay
             }
         }
         
