more names added

--- a/invite.html
+++ b/invite.html
@@ -77,7 +77,10 @@
                     'ADAM2024', 'IKER2024', 'BRANDON2024', 'KAITO2024', 'GIBSON2024',
                     'LUKE2024', 'AYO2024', 'KIERAN2024', 'CAMERON2024', 'ZINEDDINE2024',
                     'TIANTIAN2024', 'BLAKE2024', 'BRYAN2024', 'DAWSON2024', 'TY2024',
-                    'JAKE2024', 'KOSHI2024'
+                    'JAKE2024', 'KOSHI2024',
+                    // New names added
+                    'ANTUAN2024', 'ELI2024', 'EDDI2024', 'LOCKAN2024', 'MASSON2024',
+                    'JOSE2024', 'GIOVANNI2024', 'JHONNATAN2024'
                 ];
                 if (validCodes.includes(inviteCode.toUpperCase())) {
                     localStorage.setItem('loggedIn', 'true');
