--- a/invite.html
+++ b/invite.html
@@ -79,9 +79,9 @@
                     'TIANTIAN2024', 'BLAKE2024', 'BRYAN2024', 'DAWSON2024', 'TY2024',
                     'JAKE2024', 'KOSHI2024', 'ANTUAN2024', 'ELI2024', 'EDDI2024', 
                     'LOCKAN2024', 'MASSON2024', 'JOSE2024', 'GIOVANNI2024', 'JHONNATAN2024',
-                    'LIAM2024', 'EDDI2024', 'LUCAS2024', 'IVAN2024', 'BEN2024', // Added Ben's invite code
-                    'JACK2024', 'OLIVER2024' // Added Jack's and Oliver's invite codes
-                    'NEERAV2024' // Added Neerav's invite code
+                    'LIAM2024', 'EDDI2024', 'LUCAS2024', 'IVAN2024', 'BEN2024',
+                    'JACK2024', 'OLIVER2024',
+                    'NEERAV2024'
                 ];
                 if (validCodes.includes(inviteCode.toUpperCase())) {
                     localStorage.setItem('loggedIn', 'true');
