--- a/invite.html
+++ b/invite.html
@@ -82,7 +82,7 @@
                     'LIAM2024', 'EDDI2024', 'LUCAS2024', 'IVAN2024', 'BEN2024',
                     'JACK2024', 'OLIVER2024', 'NEERAV2024', 'LOGAN2024', 'JAXON2024',
                     'BENNETT2024', 'COOPER2024', 'JAMESON2024', 'ATHARV2024', 'KABIR2024',
-                    'SHRAVIN2024' // Added Shravin
+                    'SHRAVIN2024', 'AYAAN2024' // Added Ayaan
                 ];
                 if (validCodes.includes(inviteCode.toUpperCase())) {
                     localStorage.setItem('loggedIn', 'true');
