Add animated program page transition with improved readability

--- a/program.html
+++ b/program.html
@@ -17,7 +17,7 @@
                 <img id="club-logo" src="images/AAC Logo.png" alt="Apex Athletic Club Logo">
             </a>
         </div>
-        <div id="welcome-message">
+        <div id="welcome-message" class="centered">
             <h2>Welcome to Apex Athletic Club</h2>
             <h4>A Talent Factory for Promising Individuals</h4>
             <button id="learn-more">LEARN MORE</button>
