--- a/program.html
+++ b/program.html
@@ -34,6 +34,8 @@
             </div>
         </div>
     </div>
-    <script src="program.js"></script>
+    <div class="program-content">
+        <script src="program.js"></script>
+    </div>
 </body>
 </html> 
