Fix visual issues: restore Vanta background, fix favicon path, improve program page layout

--- a/program.html
+++ b/program.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.cells.min.js"></script>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 <body>
     <div id="vanta-bg"></div>
@@ -35,7 +36,13 @@
         </div>
     </div>
     <div class="program-content">
-        <script src="program.js"></script>
+        <div id="welcome-message" class="centered">
+            <!-- Welcome content -->
+        </div>
+        <div id="program-details" class="hidden">
+            <!-- Program details -->
+        </div>
     </div>
+    <script src="program.js"></script>
 </body>
 </html> 
