--- a/program.html
+++ b/program.html
@@ -18,13 +18,16 @@
                 <img id="club-logo" src="images/AAC Logo.png" alt="Apex Athletic Club Logo">
             </a>
         </div>
+    </div>
+    <div class="program-content">
         <div id="welcome-message" class="centered">
             <h2>Welcome to Apex Athletic Club</h2>
             <h4>A Talent Factory for Promising Individuals</h4>
             <button id="learn-more">LEARN MORE</button>
         </div>
-        <div id="program-details" class="hidden">
-            <p>Apex Athletic Club is an invite-only collective for exceptional individuals. Our players are distinguished by their respect, leadership, and determination to acquire new skills. Our coaches are full-time professionals that utilize best practices from the top youth academies around the world.</p>
+        
+        <div id="program-details">
+            <p>Apex Athletic Club is an invite-only collective...</p>
             <h3>Build Your Program</h3>
             <div class="sport-selection">
                 <label>
@@ -39,29 +42,7 @@
                 <label><input type="checkbox" name="sports" value="flag-football"> Flag Football</label>
                 <label><input type="checkbox" name="sports" value="small-group-training"> Small Group Training</label>
             </div>
-        </div>
-    </div>
-    <div class="program-content">
-        <div id="welcome-message" class="centered">
-            <h2>Welcome to Apex Athletic Club</h2>
-            <h4>A Talent Factory for Promising Individuals</h4>
-            <button id="learn-more">LEARN MORE</button>
-        </div>
-        
-        <div id="program-details">
-            <p>Apex Athletic Club is...</p>
-            <h3>Build Your Program</h3>
-            <div class="sport-selection">
-                <!-- Add descriptions to each sport -->
-                <label>
-                    <input type="checkbox" name="sports" value="indoor-soccer">
-                    Indoor Soccer/Futsal
-                    <div class="sport-description">
-                        Develop quick decision-making and technical skills in confined spaces
-                    </div>
-                </label>
-                <!-- Repeat for other sports -->
-            </div>
+            <button id="next-step" class="hidden">NEXT</button>
         </div>
     </div>
     <script src="program.js"></script>
